--- a/css/general.css
+++ b/css/general.css
@@ -2,3 +2,15 @@
     margin: 50px 0;
     text-align: center;
 }
+
+table, th, td {
+    border: 1px solid black;
+}
+
+tr, td {
+    padding: 4px;
+}
+
+.required {
+
+}
